--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,18 @@ body {
 
 #container {
   width: 75%;
-  height: 500px;
   background: white;
   margin: auto;
   text-align: center;
 }
 
 #todo {
-  list-style-type: none;
+  color: #40cc1a;
+  width: auto;
+}
+
+#todo li:hover {
+  color: red;
 }
 
 #main-form {
@@ -19,6 +23,16 @@ body {
 }
 
 #completed {
-  list-style-type: none;
   text-decoration: line-through;
+  color: red;
+  padding-bottom: 10px;
+}
+
+#input-button {
+  background: #5ecaf2;
+}
+
+li {
+  list-style-type: none;
+  margin-right: 4%;
 }
